dark mode fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -594,7 +594,7 @@ ul {
 }
 
 .rc-slider.slider .rc-slider-track {
-    @apply bg-black;
+    @apply bg-black/60 dark:bg-white/50;
 }
 
 .rc-slider.slider .rc-slider-handle {
@@ -607,6 +607,14 @@ ul {
 
 .rc-slider.slider .rc-slider-tooltip {
     display: none;
+}
+
+.rc-slider.slider .rc-slider-mark-text {
+    @apply text-primary/60 dark:text-primary-dark/60;
+
+    &.rc-slider-mark-text-active {
+        @apply text-primary/75 dark:text-primary-dark/75 font-bold;
+    }
 }
 
 /* Slider base styles */
